--- a/src/main/webapp/WEB-INF/pages/html/Demo1.html
+++ b/src/main/webapp/WEB-INF/pages/html/Demo1.html
@@ -13,7 +13,7 @@
     }
 
     if(window.WebSocket){
-        socket = new WebSocket("ws://localhost:9999");
+        socket = new WebSocket("ws://127.0.0.1:9999");
 
         socket.onmessage = function(event){
             appendln("receive:" + event.data);
@@ -54,13 +54,13 @@
 
 </script>
 <body>
-<form onSubmit="return false;">
-    <input type = "text" name="message" value="hello"/>
-    <br/><br/>
-    <input type="button" value="send" onClick="send(this.form.message.value)"/>
-    <hr/>
-    <h3>chat</h3>
-    <textarea id="responseText" style="width: 800px;height: 300px;"></textarea>
-</form>
+    <form onSubmit="return false;">
+        <input type = "text" name="message" value="hello"/>
+        <br/><br/>
+        <input type="button" value="send" onClick="send(this.form.message.value)"/>
+        <hr/>
+        <h3>chat</h3>
+        <textarea id="responseText" style="width: 800px;height: 300px;"></textarea>
+    </form>
 </body>
 </html>
