--- a/src/main/webapp/WEB-INF/pages/html/Demo1.html
+++ b/src/main/webapp/WEB-INF/pages/html/Demo1.html
@@ -5,54 +5,6 @@
     <title></title>
 </head>
 </head>
-<script type="text/javascript">
-    var socket;
-
-    if(!window.WebSocket){
-        window.WebSocket = window.MozWebSocket;
-    }
-
-    if(window.WebSocket){
-        socket = new WebSocket("ws://127.0.0.1:9999");
-
-        socket.onmessage = function(event){
-            appendln("receive:" + event.data);
-        };
-
-        socket.onopen = function(event){
-            appendln("WebSocket is opened");
-
-        };
-
-        socket.onclose = function(event){
-            appendln("WebSocket is closed");
-        };
-    }else{
-        alert("WebSocket is not support");
-    }
-
-    function send(message){
-        if(!window.WebSocket){return;}
-        if(socket.readyState == WebSocket.OPEN){
-            socket.send(message);
-            appendln("send:" + message);
-        }else{
-            alert("WebSocket is failed");
-        }
-
-    }
-
-    function appendln(text) {
-        var ta = document.getElementById('responseText');
-        ta.value += text + "\r\n";
-    }
-
-    function clear() {
-        var ta = document.getElementById('responseText');
-        ta.value = "";
-    }
-
-</script>
 <body>
     <form onSubmit="return false;">
         <input type = "text" name="message" value="hello"/>
@@ -62,5 +14,88 @@
         <h3>chat</h3>
         <textarea id="responseText" style="width: 800px;height: 300px;"></textarea>
     </form>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="http://static.fornow.com.cn/static/reconnecting-websocket.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        function initSocket(option) {
+            //服务器地址
+            var locate = window.location;
+            var url = option.url ? option.url : "ws://" + locate.hostname + ":" + locate.port + _get_basepath() + "/";
+            //回调函数
+            var callback = option.callback;
+            if (typeof callback !== "function") {
+                console.log('callback 必须为函数');
+                return false;
+            }
+            var authorization = option.authorization;
+            if(!authorization){
+                console.log('authorization 必须存在');
+                return false;
+            }
+
+            //一些对浏览器的兼容已经在插件里面完成
+            var websocket = new ReconnectingWebSocket(url,authorization,null);
+
+            websocket.debug = true;
+            websocket.reconnectInterval = 3000;
+            websocket.maxReconnectAttempts = 5;
+
+            //连接发生错误的回调方法
+            websocket.onerror = function () {
+                console.log("------------WS连接错误------------");
+            };
+
+            //连接成功建立的回调方法
+            websocket.onopen = function (event) {
+                console.log("------------WS连接已建立------------");
+            }
+
+            //接收到消息的回调方法
+            websocket.onmessage = function (event) {
+                console.log("------------WS收到消息------------");
+                callback(event.data);
+            }
+
+            //连接关闭的回调方法
+            websocket.onclose = function () {
+                websocket.close();
+                console.log("------------WS已关闭------------");
+            }
+
+            return websocket;
+        }
+
+
+        var option = {
+            url: "ws://127.0.0.1:9999/",
+            authorization: "A",
+            callback: function (data) {
+                console.log("------------"+data+"------------");
+            }
+        };
+        var ws = initSocket(option);
+
+        function send(message){
+            if(!ws){return;}
+            if(ws.readyState == WebSocket.OPEN){
+                ws.send(message);
+                appendln("send:" + message);
+            }else{
+                console.log("------------WS Send Fail------------");
+            }
+        }
+
+        function appendln(text) {
+            var ta = document.getElementById('responseText');
+            ta.value += text + "\r\n";
+        }
+
+        function clear() {
+            var ta = document.getElementById('responseText');
+            ta.value = "";
+        }
+
+    </script>
 </body>
 </html>
